# vodozemac-python

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  python.yml  release.yml
src/: account.rs  error.rs  group_sessions.rs  lib.rs  pk_encryption.rs  sas.rs  session.rs
src/types/: curve25519.rs  ed25519.rs  megolm_messages.rs  messages.rs  mod.rs  session_keys.rs
tests/: account_test.py  conftest.py  group_session_test.py  pk_encryption_test.py  sas_test.py  session_test.py
vodozemac/: __init__.py  __init__.pyi
