[package]
name = "vodozemac-python"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/matrix-nio/vodozemac-python"
homepage = "https://github.com/matrix-nio/vodozemac-python"
readme = "README.md"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.15"
thiserror = "1.0.63"
[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac.git"
rev = "12f9036bf7f2536c172273602afcdc9aeddf8cf7"
features = ["insecure-pk-encryption"]

[package.metadata.maturin]
name = "vodozemac"

[dependencies.pyo3]
version = "0.22.2"
features = ["extension-module"]

[features]
gil-refs = []
