[build-system]
requires = ["maturin>=1.9.0,<1.10.0"]
build-backend = "maturin"

[tool.maturin]
name = "vodozemac"
bindings = "pyo3"

[project]
name = "vodozemac"
description = "Python bindings for vodozemac"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
repository = "https://github.com/matrix-nio/vodozemac-python"
