[build-system]
requires = ["maturin>=1.9.0,<1.10.0"]
build-backend = "maturin"

[tool.maturin]
name = "vodozemac"
bindings = "pyo3"

[project]
name = "vodozemac"
description = "Python bindings for vodozemac"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/matrix-nio/vodozemac-python"

[dependency-groups]
dev = [
    {include-group = "nox"},
    {include-group = "tests"},
]
nox = [
    "nox-uv>=0.6.0",
]
tests = [
    "hypothesis>=6.135.21",
    "maturin>=1.9.0",
    "pytest>=8.4.1",
]
