[build-system]
build-backend = "maturin"

requires = [ "maturin>=1.9,<1.10" ]

[project]
name = "vodozemac"
description = "Python bindings for vodozemac"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

urls.repository = "https://github.com/matrix-nio/vodozemac-python"

[dependency-groups]
dev = [
  { include-group = "nox" },
  { include-group = "tests" },
]
nox = [
  "nox-uv>=0.6",
]
tests = [
  "hypothesis>=6.135.21",
  "maturin>=1.9",
  "pytest>=8.4.1",
]

[tool.maturin]
name = "vodozemac"
bindings = "pyo3"
python-source = "."
